--- a/_pgbackup/index_1756919347.html
+++ b/_pgbackup/index_1756919347.html
@@ -34,7 +34,7 @@
                 <div class="container mx-auto px-4 py-24">
                     <div class="-mx-4 flex flex-wrap items-center justify-center space-y-6 lg:space-y-0">
                         <div class="px-4 w-full md:w-10/12 xl:w-7/12"> 
-                            <img class="bg-white inline-flex mb-6 p-2 rounded-full shadow-xl w-1/2" alt="..." width="800" height="800" src="blake%202024%20profile%20pic.png"/>
+                            <img class="bg-white inline-flex mb-6 p-2 rounded-full shadow-xl w-1/2" alt="..." width="800" height="800" src="file:///C:/Users/Freddy/Downloads/blake%202024%20profile%20pic.png"/>
                             <h1 class="font-bold mb-2 text-4xl text-gray-900 md:leading-tight lg:leading-tight lg:text-5xl">Frederick Blake</h1>
                             <b>Montville, NJ</b>
                             <p class="mb-6"></p>
@@ -158,7 +158,7 @@ Education Honors Society (Kappa Delta Pi)</p>
                             <b>Published Article - Summer / Fall 2023</b> 
                             <p class="indent-3">My academic paper titled &quot;Twentieth Century Women Across Cultures,&quot; which explored means of teaching historical events by utilizing case study analysis to improve student engagement, was selected and published in the Summer / Fall 2023 edition of <i>Teaching Social Studies</i><span>&nbsp;by the NJCSS (New Jersey Council for the Social Studies).</span></p> 
                         </div>
-                        <div class="mb-12 px-4 w-full md:-mt-24 md:w-6/12"> <a href="https://docs.google.com/presentation/d/1YS6du7wM7aKL49OX-pnH0oTJzhLr7baqU5DgezilgQM/edit?usp=sharing"><img src="Differentiating%20Instruction%20with%20AI.jpg" class="mb-6 mt-0 rounded-xl group-hover:opacity-80" alt="AI Differentiation"></a>
+                        <div class="mb-12 px-4 w-full md:-mt-24 md:w-6/12"> <a href="https://docs.google.com/presentation/d/1YS6du7wM7aKL49OX-pnH0oTJzhLr7baqU5DgezilgQM/edit?usp=sharing"><img src="Differentiating%20Instruction%20with%20AI.jpg" class="mb-6 mt-0 rounded-xl group-hover:opacity-80" alt="Rec Camper Data"></a>
                             <h4 class="font-bold mb-2 text-gray-900 text-xl">Differentiating Instruction with A.I.</h4>
                             <h4 class="font-bold mb-2 text-gray-900 text-xl"></h4>
                             <h4 class="font-bold mb-2 text-gray-900 text-xl"></h4>
@@ -209,10 +209,10 @@ Education Honors Society (Kappa Delta Pi)</p>
 </p>
                 <p class="-mt-3 font-sans mb-6 ml-10 mr-5 px-5 text-center">PC Hardware Installation &amp; Maintenance (3 years)&nbsp;</p>
                 <p class="font-sans mb-6 mx-5 px-5 text-center"><b>Professional Strengths (10+ years)</p>
-                <p class="-mt-3 font-sans mb-6 ml-10 mr-5 px-5 text-center"><span><span style="font-weight: normal;">Educational Technology &amp; AI Integration (2 years)</span></span></p>
-                <p class="-mt-3 font-sans mb-6 ml-10 mr-5 px-5 text-center"><span style="font-weight: normal;">Project Management &amp; Team Leadership (8 years)</span></p>
-                <p class="-mt-3 font-sans mb-6 ml-10 mr-5 px-5 text-center"><span style="font-weight: normal;">Communication &amp; Presentation (10+ years)</span></p>
-                <p class="-mt-3 font-sans mb-6 ml-10 mr-5 px-5 text-center"><span style="font-weight: normal;">Organizational &amp; Administrative Skills (9 years)&nbsp;</span></p>
+                <p class="-mt-3 font-sans mb-6 ml-10 mr-5 px-5 text-center"><span>Educational Technology &amp; AI Integration (2 years)</span></p>
+                <p class="-mt-3 font-sans mb-6 ml-10 mr-5 px-5 text-center">Project Management &amp; Team Leadership (8 years)</p>
+                <p class="-mt-3 font-sans mb-6 ml-10 mr-5 px-5 text-center">Communication &amp; Presentation (10+ years)</p>
+                <p class="-mt-3 font-sans mb-6 ml-10 mr-5 px-5 text-center">Organizational &amp; Administrative Skills (9 years)&nbsp;</p>
             </section>
             <div class="container mx-auto">
                 <div class="lg:mx-auto lg:w-7/12">
