--- a/_pgbackup/index_1756920085.html
+++ b/_pgbackup/index_1756920085.html
@@ -31,7 +31,7 @@
                 <div class="container mx-auto px-4 py-24"> 
                     <div class="-mx-4 flex flex-wrap items-center justify-center space-y-6 lg:space-y-0"> 
                         <div class="px-4 w-full md:w-10/12 xl:w-7/12"> 
-                            <img class="bg-white inline-flex mb-6 p-2 rounded-full shadow-xl w-1/2" alt="..." width="800" height="800" src="coming%20soon.jpg"/> 
+                            <img class="bg-white inline-flex mb-6 p-2 rounded-full shadow-xl w-1/2" alt="..." width="800" height="800" src="Website%20FBlake%20Profile%202025.jpg"/> 
                             <h1 class="font-bold mb-2 text-4xl text-gray-900 md:leading-tight lg:leading-tight lg:text-5xl">Frederick Blake</h1> <b>Montville, NJ</b> 
                             <p class="mb-6"></p> 
                             <p class="mb-6">Masters candidate in Business Analytics and A.I. with a strong background in education seeking to leverage technical and communication skills to drive data-informed business decisions.</p> 
